--- a/AwayFromKeyboard/AwayFromKeyboard/AwayFromKeyboard.csproj
+++ b/AwayFromKeyboard/AwayFromKeyboard/AwayFromKeyboard.csproj
@@ -243,7 +243,7 @@
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\Session.cs" />
     <Compile Include="Models\Status.cs" />
-    <Compile Include="MongoDBContext\MongoDBContext.cs" />
+    <Compile Include="MongoDBContext\DBContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -308,6 +308,7 @@
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Employee\Index.cshtml" />
+    <Content Include="Views\Employee\employeeList.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
